# try-electron-numpy

./: .gitignore  CMakeLists.txt  README.md  package.json
assets/: index.html  index.js
iffy/: CMakeLists.txt  addon-node.c  addon.c  addon.h
src/: main.js  preload.js
